test/tests/functions/community_id/missing_dst_ip.txt
error: required argument `dst_ip` was not provided
 --> tests/functions/community_id/missing_dst_ip.tql:6:8
  |
6 |   bad: community_id(src_ip=null, proto=null),
  |        ^^^^^^^^^^^^ 
  |
  = usage: community_id(src_ip=ip, dst_ip=ip, proto=string, [src_port=int, dst_port=int, seed=int])
  = docs: https://docs.tenzir.com/reference/functions/community_id
